--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        .inter-font {
+            font-family: "Inter", sans-serif;
+        }
+
+        .mulish-font {
+            font-family: "Mulish", sans-serif;
+        }
+    </style>
     <title>Retro Forum</title>
 </head>
 
 <body>
     <h1>Retro Forum</h1>
+    <script src="./script.js"></script>
 </body>
 
 </html>
