incomplete navbar added

--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
                         <div class="flex items-center">
                             <div class="flex gap-2">
                                 <a href="">
-                                    <div class="p-2 bg-white rounded-full flex justify-center"><img src="./images/home.png"
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]" src="./images/home.png"
                                             alt=""></div>
                                 </a>
                                 <a href="">
-                                    <div class="p-2 bg-white rounded-full flex justify-center"><img src="./images/pen.png"
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]" src="./images/pen.png"
                                             alt=""></div>
                                 </a>
                                 <a href="">
-                                    <div class="p-2 bg-white rounded-full flex justify-center"><img
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]"
                                             src="./images/person.png" alt=""></div>
                                 </a>
                                 <a href="">
-                                    <div class="p-2 bg-white rounded-full flex justify-center"><img class=""
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]" 
                                             src="./images/flag.png" alt=""></div>
                                 </a>
 
                             </div>
-                            <div><button class="btn bg-[#797DFC] text-white rounded-full">Sign In</button></div>
+                            <div><button class="btn btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full">Sign In</button></div>
                         </div>
                         <!-- <div class="dropdown dropdown-end">
                             <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
