--- a/index.html
+++ b/index.html
@@ -28,74 +28,37 @@
     <header>
         <section>
             <nav class="w-[90%] max-w-[1171px]  my-0 mx-auto">
-                <div class="navbar bg-base-100 ">
+                <div class="navbar bg-base-100 gap-2">
                     <div class="flex-1">
-                        <div class="bg-white"><img src="./images/logo.png" alt=""></div>
+                        <div class="bg-white flex justify-center rounded-full"><img
+                                class="w-[50%] md:w-[75%] lg:w-[100%]" src="./images/logo.png" alt=""></div>
                     </div>
                     <div class="flex-none">
-                        <div class="flex items-center">
-                            <div class="flex gap-2">
+                        <div class="flex items-center gap-2">
+                            <div class="flex gap-1">
                                 <a href="">
-                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]" src="./images/home.png"
-                                            alt=""></div>
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img
+                                            class="w-[50%] md:w-[75%] lg-w-[100%]" src="./images/home.png" alt=""></div>
                                 </a>
                                 <a href="">
-                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]" src="./images/pen.png"
-                                            alt=""></div>
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img
+                                            class="w-[50%] md:w-[75%] lg-w-[100%]" src="./images/pen.png" alt=""></div>
                                 </a>
                                 <a href="">
-                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]"
-                                            src="./images/person.png" alt=""></div>
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img
+                                            class="w-[50%] md:w-[75%] lg-w-[100%]" src="./images/person.png" alt="">
+                                    </div>
                                 </a>
                                 <a href="">
-                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img class="w-[25%] sm:w-[50%] md:w-[75%] lg-w-[100%]" 
-                                            src="./images/flag.png" alt=""></div>
+                                    <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img
+                                            class="w-[50%] md:w-[75%] lg-w-[100%]" src="./images/flag.png" alt=""></div>
                                 </a>
 
                             </div>
-                            <div><button class="btn btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full">Sign In</button></div>
+                            <div><button
+                                    class="btn btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full">Sign
+                                    In</button></div>
                         </div>
-                        <!-- <div class="dropdown dropdown-end">
-                            <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                                <div class="indicator">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
-                                        viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                                    </svg>
-                                    <span class="badge badge-sm indicator-item">8</span>
-                                </div>
-                            </div>
-                            <div tabindex="0"
-                                class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow">
-                                <div class="card-body">
-                                    <span class="font-bold text-lg">8 Items</span>
-                                    <span class="text-info">Subtotal: $999</span>
-                                    <div class="card-actions">
-                                        <button class="btn btn-primary btn-block">View cart</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="dropdown dropdown-end">
-                            <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-                                <div class="w-10 rounded-full">
-                                    <img alt="Tailwind CSS Navbar component"
-                                        src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-                                </div>
-                            </div>
-                            <ul tabindex="0"
-                                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                                <li>
-                                    <a class="justify-between">
-                                        Profile
-                                        <span class="badge">New</span>
-                                    </a>
-                                </li>
-                                <li><a>Settings</a></li>
-                                <li><a>Logout</a></li>
-                            </ul>
-                        </div> -->
                     </div>
                 </div>
             </nav>
