banner section html css added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header>
-        <section>
+        <section class="">
             <nav class="w-[90%] max-w-[1171px]  my-0 mx-auto">
                 <div class="navbar bg-base-100 gap-2">
                     <div class="flex-1">
@@ -56,12 +56,65 @@
 
                             </div>
                             <div><button
-                                    class="btn btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full">Sign
+                                    class="mulish-font font-bold lg:text-xl btn btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full">Sign
                                     In</button></div>
                         </div>
                     </div>
                 </div>
             </nav>
+        </section>
+        <section class="">
+            <div class="w-[90%] max-w-[1171px]  my-0 mx-auto mt-6 md:mt-9 lg:mt-12 ">
+                <div class="hero bg-[#12132D] rounded-xl">
+                    <div class="hero-content flex-col lg:flex-row-reverse py-12 md:py-18 lg:py-24 ">
+                        <div class="bg-white p-4 w-[300px] rounded-3xl">
+                            <div class=" flex  justify-between">
+                                <div class="">
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Registered Users</p>
+                                </div>
+                                <div>
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">01</p>
+                                </div>
+                            </div>
+                            <div class=" flex  justify-between">
+                                <div class="">
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Forum</p>
+                                </div>
+                                <div>
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">05</p>
+                                </div>
+                            </div>
+                            <div class=" flex  justify-between">
+                                <div class="">
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Topics</p>
+                                </div>
+                                <div>
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">01</p>
+                                </div>
+                            </div>
+                            <div class=" flex  justify-between">
+                                <div class="">
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Replies</p>
+                                </div>
+                                <div>
+                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">01</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="lg:w-[100%]">
+                            <h1 class="text-[#FFF] mulish-font font-black text-6xl ">Welcome to the <br>
+                                <span class="text-[#797DFC]">ReTro</span> Forum
+                            </h1>
+                            <p class="py-6 mulish-font text-xl text-[#FFFFFFCC] font-medium">Share your favorite opinion
+                                and win and wp <br> forum coffee mug!</p>
+                            <div class="bg-white rounded-full "><input
+                                    class=" bg-white rounded-full border-none w-[75%]" type="text"> <button
+                                    class="btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full btn btn-primary">Get
+                                    Started</button></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </header>
     <main>
