section nav and banner some html css edited and also  added

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <header>
         <section class="">
             <nav class="w-[90%] max-w-[1171px]  my-0 mx-auto">
-                <div class="navbar bg-base-100 gap-2">
-                    <div class="flex-1">
+                <div class="navbar bg-base-100 gap-2 flex flex-col md:flex-row lg:flex-row">
+                    <div class=" flex-1">
                         <div class="bg-white flex justify-center rounded-full"><img
                                 class="w-[50%] md:w-[75%] lg:w-[100%]" src="./images/logo.png" alt=""></div>
                     </div>
                     <div class="flex-none">
-                        <div class="flex items-center gap-2">
+                        <div class="flex items-center gap-2 flex-col md:flex-row lg:flex-row">
                             <div class="flex gap-1">
                                 <a href="">
                                     <div class="p-1 sm:p-2 md:p-3 bg-white rounded-full flex justify-center"><img
@@ -64,51 +64,56 @@
             </nav>
         </section>
         <section class="">
-            <div class="w-[90%] max-w-[1171px]  my-0 mx-auto mt-6 md:mt-9 lg:mt-12 ">
-                <div class="hero bg-[#12132D] rounded-xl">
-                    <div class="hero-content flex-col lg:flex-row-reverse py-12 md:py-18 lg:py-24 ">
-                        <div class="bg-white p-4 w-[300px] rounded-3xl">
+            <div class="w-[90%] max-w-[1171px]  my-0 mx-auto mt-3 md:mt-9 lg:mt-12 ">
+                <div class="hero bg-[#12132D] rounded-3xl">
+                    <div class="hero-content flex-col lg:flex-row-reverse py-6 md:py-18 lg:py-24 ">
+                        <div class="bg-white p-4 w-full lg:w-[300px] rounded-3xl">
                             <div class=" flex  justify-between">
                                 <div class="">
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Registered Users</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">Registered
+                                        Users</p>
                                 </div>
                                 <div>
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">01</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">01</p>
                                 </div>
                             </div>
                             <div class=" flex  justify-between">
                                 <div class="">
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Forum</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">Forum</p>
                                 </div>
                                 <div>
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">05</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">05</p>
                                 </div>
                             </div>
                             <div class=" flex  justify-between">
                                 <div class="">
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Topics</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">Topics</p>
                                 </div>
                                 <div>
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">01</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">01</p>
                                 </div>
                             </div>
                             <div class=" flex  justify-between">
                                 <div class="">
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">Replies</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">Replies</p>
                                 </div>
                                 <div>
-                                    <p class="text-[#12192DCC] mulish-font text-xl font-medium">01</p>
+                                    <p class="text-[#12192DCC] mulish-font text-sm lg:text-xl font-medium">01</p>
                                 </div>
                             </div>
                         </div>
                         <div class="lg:w-[100%]">
-                            <h1 class="text-[#FFF] mulish-font font-black text-6xl ">Welcome to the <br>
+                            <h1
+                                class="text-[#FFF] mulish-font font-black text-2xl md:text-4xl lg:text-6xl text-center lg:text-left ">
+                                Welcome to the <br>
                                 <span class="text-[#797DFC]">ReTro</span> Forum
                             </h1>
-                            <p class="py-6 mulish-font text-xl text-[#FFFFFFCC] font-medium">Share your favorite opinion
-                                and win and wp <br> forum coffee mug!</p>
+                            <p
+                                class="py-6 mulish-font text-sm md:text-base lg:text-xl text-[#FFFFFFCC] font-medium text-center lg:text-left">
+                                Share your favorite opinion
+                                and win and wp forum coffee mug!</p>
                             <div class="bg-white rounded-full "><input
-                                    class=" bg-white rounded-full border-none w-[75%]" type="text"> <button
+                                    class=" bg-white rounded-full border-none lg:w-[80%]" type="text"> <button
                                     class="btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full btn btn-primary">Get
                                     Started</button></div>
                         </div>
