section navbar and banner html css completed with resopsive neary

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 class="py-6 mulish-font text-sm md:text-base lg:text-xl text-[#FFFFFFCC] font-medium text-center lg:text-left">
                                 Share your favorite opinion
                                 and win and wp forum coffee mug!</p>
-                            <div class="bg-white rounded-full "><input
+                            <div class="bg-white text-center rounded-full "><input
                                     class=" bg-white rounded-full border-none lg:w-[80%]" type="text"> <button
                                     class="btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full btn btn-primary">Get
                                     Started</button></div>
