--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="">
         <section class="">
             <nav class="w-[90%] max-w-[1171px]  my-0 mx-auto">
                 <div class="navbar bg-base-100 gap-2 flex flex-col md:flex-row lg:flex-row">
@@ -123,7 +123,73 @@
         </section>
     </header>
     <main>
-
+        <section class="">
+            <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-9">
+                <div class="text-center space-y-3 flex flex-col items-center">
+                    <h2 class="mulish-font text-xl md:text-2xl lg:text-4xl font-black">let's Discuss</h2>
+                    <p class="inter-font text-sm md:text-base  lg:text-xl font-normal md:w-[60%] lg:w-[60%]">Yes, you
+                        can run unit tests and view the results directly within the app. The integated testing features
+                        allow for a streamlined.</p>
+                </div>
+            </div>
+        </section>
+        <section class="">
+            <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
+                <div class="flex flex-col lg:flex-row justify-center">
+                    <div class="flex bg-[#797DFC1A] w-full p-2 rounded-3xl lg:w-[60%]">
+                        <div>
+                            <div class="w-[50%] lg:w-[25%]">
+                                <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600"></div>
+                                <img class="w-full" src="./images/joinforum.png" alt="">
+                            </div>
+                        </div>
+                        <div>
+                            <div class="">
+                                <p class="space-x-3 inter-font text-base font-medium">
+                                    <span># Music</span><span>Author:</span> <span>Awlad Hossain</span>
+                                </p>
+                            </div>
+                            <div>
+                                <h3 class="mulish font text-xl font-bold">10 Kids Unaware of Their Halloween Constume
+                                </h3>
+                                <p class="inter-font text-base font-normal ">
+                                    It's one things to subject yourself to the Halloween costume mushap because hey
+                                    that's
+                                    your prerogative
+                                </p>
+                            </div>
+                            <div class="flex gap-2">
+                                <div class="flex gap-2">
+                                    <div>
+                                        <img src="./images/message-2.png" alt="">
+                                    </div>
+                                    <div>
+                                        <p class="inter-font text-base font-normal">560</p>
+                                    </div>
+                                </div>
+                                <div class="flex gap-2">
+                                    <div>
+                                        <img src="./images/eye.png" alt="">
+                                    </div>
+                                    <div>
+                                        <p class="inter-font text-base font-normal">1568</p>
+                                    </div>
+                                </div>
+                                <div class="flex gap-2">
+                                    <div>
+                                        <img src="./images/time.png" alt="">
+                                    </div>
+                                    <div>
+                                        <p class="inter-font text-base font-normal"><span>5</span> <span>min</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
