section discuss some html css edited and added

--- a/index.html
+++ b/index.html
@@ -143,23 +143,26 @@
                                 <img class="w-full" src="./images/joinforum.png" alt="">
                             </div>
                         </div>
-                        <div>
-                            <div class="">
-                                <p class="space-x-3 inter-font text-base font-medium">
-                                    <span># Music</span><span>Author:</span> <span>Awlad Hossain</span>
-                                </p>
-                            </div>
+                        <div class="divide-y-2 divide-dashed space-y-3">
                             <div>
-                                <h3 class="mulish font text-xl font-bold">10 Kids Unaware of Their Halloween Constume
-                                </h3>
-                                <p class="inter-font text-base font-normal ">
-                                    It's one things to subject yourself to the Halloween costume mushap because hey
-                                    that's
-                                    your prerogative
-                                </p>
+                                <div class="">
+                                    <p class="space-x-3 inter-font text-base font-medium">
+                                        <span># Music</span><span>Author:</span> <span>Awlad Hossain</span>
+                                    </p>
+                                </div>
+                                <div>
+                                    <h3 class="mulish font text-xl font-bold">10 Kids Unaware of Their Halloween
+                                        Constume
+                                    </h3>
+                                    <p class="inter-font text-base font-normal ">
+                                        It's one things to subject yourself to the Halloween costume mushap because hey
+                                        that's
+                                        your prerogative
+                                    </p>
+                                </div>
                             </div>
-                            <div class="flex gap-2">
-                                <div class="flex gap-2">
+                            <div class="flex gap-2 pt-4">
+                                <div class="flex flex-col md:flex-row lg:flex-row gap-2">
                                     <div>
                                         <img src="./images/message-2.png" alt="">
                                     </div>
@@ -167,7 +170,7 @@
                                         <p class="inter-font text-base font-normal">560</p>
                                     </div>
                                 </div>
-                                <div class="flex gap-2">
+                                <div class="flex flex-col md:flex-row lg:flex-row gap-2">
                                     <div>
                                         <img src="./images/eye.png" alt="">
                                     </div>
@@ -175,7 +178,7 @@
                                         <p class="inter-font text-base font-normal">1568</p>
                                     </div>
                                 </div>
-                                <div class="flex gap-2">
+                                <div class="flex flex-col md:flex-row lg:flex-row gap-2">
                                     <div>
                                         <img src="./images/time.png" alt="">
                                     </div>
