--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
         </section>
         <section class="">
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
-                <div class="flex flex-col lg:flex-row justify-center">
-                    <div class="flex bg-[#797DFC1A] w-full p-2 rounded-3xl lg:w-[60%]">
+                <div class="flex flex-col lg:flex-row justify-center lg:gap-4 space-y-3 lg:space-y-0">
+                    <div class="flex bg-[#797DFC1A] w-full p-2 rounded-3xl  lg:w-[60%]">
                         <div>
-                            <div class="w-[50%] lg:w-[25%]">
+                            <div class="w-[50%] lg:w-[40%]">
                                 <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600"></div>
                                 <img class="w-full" src="./images/joinforum.png" alt="">
                             </div>
@@ -189,7 +189,35 @@
                             </div>
                         </div>
                     </div>
-                    <div></div>
+                    <!-- bg-[#12132d0d] -->
+                    <div class="bg-gray-700 lg:w-[30%] p-4 rounded-3xl space-y-3">
+                        <div class="flex justify-between">
+                            <div>
+                                <h2 class="text-white mulish-font text-xl font-bold">Title</h2>
+                            </div>
+                            <div class="flex gap-1">
+                                <div>
+                                    <img src="./images/tick.png" alt="">
+                                </div>
+                                <div>
+                                    <p class="text-white inter-font text-base font-normal">Mark as read ( <span>0</span> )</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex justify-between bg-white rounded-xl p-2 items-center">
+                            <div>
+                                <p class="mulish-font text-base font-semibold text-black">10 Kids Unaware of Their
+                                    Halloween
+                                    Costume</p>
+                            </div>
+                            <div class="flex flex-col lg:flex-row min-w-[25%] gap-1 items-center">
+                                <div><img src="./images/eye.png" alt=""></div>
+                                <div>
+                                    <p class="text-black">1568</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
