section join html css added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header class="">
         <section class="">
-            <nav class="w-[90%] max-w-[1171px]  my-0 mx-auto">
+            <nav class="w-[90%] max-w-[1171px]  my-0 mx-auto mt-3 md:mt-6 lg:mt-9">
                 <div class="navbar bg-base-100 gap-2 flex flex-col md:flex-row lg:flex-row">
                     <div class=" flex-1">
                         <div class="bg-white flex justify-center rounded-full"><img
@@ -123,6 +123,7 @@
         </section>
     </header>
     <main>
+        <!-- section discuss start -->
         <section class="">
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-9">
                 <div class="text-center space-y-3 flex flex-col items-center">
@@ -200,7 +201,8 @@
                                     <img src="./images/tick.png" alt="">
                                 </div>
                                 <div>
-                                    <p class="text-white inter-font text-base font-normal">Mark as read ( <span>0</span> )</p>
+                                    <p class="text-white inter-font text-base font-normal">Mark as read ( <span>0</span>
+                                        )</p>
                                 </div>
                             </div>
                         </div>
@@ -221,6 +223,23 @@
                 </div>
             </div>
         </section>
+        <!-- section discuss end -->
+        <!-- section join start -->
+        <section>
+            <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
+                <div class="hero bg-[#12132D] rounded-3xl p-2 md:p-4 lg:p-6">
+                    <div class="hero-content flex-col lg:flex-row-reverse">
+                      <img  src="./images/joinforum.png" class="w-full rounded-lg shadow-2xl" />
+                      <div>
+                        <h1 class="mulish-font text-white text-2xl lg:text-4xl font-black">Join Our Forum</h1>
+                        <p class="py-6 mulish-font text-base lg:text-xl font-medium">Share your favorite opinion and win and wp forum foffee mug! Yes, your can run unit tests ande view the results directly within the app.</p>
+                        <button class="btn rounded-full px-6 bg-[#797DFC] text-white">Registered Now</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <!-- section join end -->
     </main>
     <footer>
 
