--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <section class="">
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div class="flex flex-col lg:flex-row justify-center lg:gap-4 space-y-3 lg:space-y-0">
-                    <div class="flex bg-[#797DFC1A] w-full p-2 rounded-3xl  lg:w-[60%]">
+                    <div class="flex bg-[#797DFC1A] w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
                         <div>
                             <div class="w-[50%] lg:w-[40%]">
                                 <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600"></div>
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                     <!-- bg-[#12132d0d] -->
-                    <div class="bg-gray-700 lg:w-[30%] p-4 rounded-3xl space-y-3">
+                    <div class="bg-gray-700 lg:w-[30%] p-4 rounded-3xl space-y-3 lg:flex-2">
                         <div class="flex justify-between">
                             <div>
                                 <h2 class="text-white mulish-font text-xl font-bold">Title</h2>
@@ -225,7 +225,7 @@
         </section>
         <!-- section discuss end -->
         <!-- section join start -->
-        <section>
+        <section class="">
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div class="hero bg-[#12132D] rounded-3xl p-2 md:p-4 lg:p-6">
                     <div class="hero-content flex-col lg:flex-row-reverse">
