some html css changed in section discuss

--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
                         allow for a streamlined.</p>
                 </div>
             </div>
-        </section>
-        <section class="">
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div class="flex flex-col lg:flex-row justify-center lg:gap-4 space-y-3 lg:space-y-0">
                     <div class="flex bg-[#797DFC1A] w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
@@ -229,14 +227,16 @@
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div class="hero bg-[#12132D] rounded-3xl p-2 md:p-4 lg:p-6">
                     <div class="hero-content flex-col lg:flex-row-reverse">
-                      <img  src="./images/joinforum.png" class="w-full rounded-lg shadow-2xl" />
-                      <div>
-                        <h1 class="mulish-font text-white text-2xl lg:text-4xl font-black">Join Our Forum</h1>
-                        <p class="py-6 mulish-font text-base lg:text-xl font-medium">Share your favorite opinion and win and wp forum foffee mug! Yes, your can run unit tests ande view the results directly within the app.</p>
-                        <button class="btn rounded-full px-6 bg-[#797DFC] text-white">Registered Now</button>
-                      </div>
+                        <img src="./images/joinforum.png" class="w-full rounded-lg shadow-2xl" />
+                        <div>
+                            <h1 class="mulish-font text-white text-2xl lg:text-4xl font-black">Join Our Forum</h1>
+                            <p class="py-6 mulish-font text-base lg:text-xl font-medium">Share your favorite opinion and
+                                win and wp forum foffee mug! Yes, your can run unit tests ande view the results directly
+                                within the app.</p>
+                            <button class="btn rounded-full px-6 bg-[#797DFC] text-white">Registered Now</button>
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
         <!-- section join end -->
