--- a/index.html
+++ b/index.html
@@ -240,6 +240,46 @@
             </div>
         </section>
         <!-- section join end -->
+        <!-- section posts start -->
+        <section class="">
+            <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
+                <div class="text-center space-y-3 flex flex-col items-center">
+                    <h2 class="mulish-font text-xl md:text-2xl lg:text-4xl font-black">Latest Posts</h2>
+                    <p class="inter-font text-sm md:text-base  lg:text-xl font-normal md:w-[60%] lg:w-[60%]">Yes, you
+                        can run unit tests and view the results directly within the app, The integrated testing features
+                        allow for streamlined.</p>
+                </div>
+            </div>
+            <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
+                <div class="flex flex-wrap justify-center">
+                    <div class="lg:w-[30%]">
+                        <div class="w-full">
+                            <img class="w-full" src="./images/joinforum.png" alt="">
+                        </div>
+                        <div>
+                            <div class="flex items-center">
+                                <div class="rounded-full p-2"><img src="./images/calender.png" alt=""></div>
+                                <div>
+                                    <p class="mulish-font text-base font-normal">24 janurary 2024</p>
+                                </div>
+                            </div>
+                            <div>
+                                <h2 class="mulish-font text-xl font-extrabold">What will a mars habitat force that impact in our daily life</h2>
+                                <p class="mulish-font text-base font-normal">Yes, you can run unit tests and view the results directly within the app</p>
+                            </div>
+                        </div>
+                        <div class="flex items-center">
+                            <div><img src="./images/author.png" alt=""></div>
+                            <div class="">
+                                <h3 class="mulish-font text-base font-bold">Dianne Russell</h3>
+                                <p class="mulish-font text-sm font-normal">ROR Devoloper</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- section posts end -->
     </main>
     <footer>
 
