--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- daisyui cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- inter and mulish fonts link from google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
+    <!-- fontawosome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         .inter-font {
@@ -264,8 +270,10 @@
                                 </div>
                             </div>
                             <div>
-                                <h2 class="mulish-font text-xl font-extrabold">What will a mars habitat force that impact in our daily life</h2>
-                                <p class="mulish-font text-base font-normal">Yes, you can run unit tests and view the results directly within the app</p>
+                                <h2 class="mulish-font text-xl font-extrabold">What will a mars habitat force that
+                                    impact in our daily life</h2>
+                                <p class="mulish-font text-base font-normal">Yes, you can run unit tests and view the
+                                    results directly within the app</p>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -281,8 +289,26 @@
         </section>
         <!-- section posts end -->
     </main>
-    <footer>
-
+    <footer class="">
+        <section>
+            <footer class="footer footer-center p-10 bg-gray-50 text-primary-content">
+                <aside>
+                    <img src="./images/logo.png" alt="">
+                    <p class="mulish-font text-base font-normal lg:w-[50%]">
+                        Contrary to popular belief, Lorem Inpsum is not simply random text, It has roots in a piece of classical Latin literature from 45 BC
+                    </p>
+                </aside>
+                <nav>
+                    <div class="grid grid-flow-col gap-4">
+                        <a href=""><i class="text-xl  md:text-2xl lg:text-3xl fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="text-xl  md:text-2xl lg:text-3xl fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="text-xl  md:text-2xl lg:text-3xl fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="text-xl  md:text-2xl lg:text-3xl fa-brands fa-github"></i></a>
+                    </div>
+                </nav>
+                <p class="mulish-font text-base font-light">2017, All right reserved</p>
+            </footer>
+        </section>
     </footer>
     <script src="./script.js"></script>
 </body>
