mark btn added in section discuss

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <h3 class="post-title1 mulish font text-xl font-bold">10 Kids Unaware of Their Halloween
+                                    <h3 class="post-title1 mulish font text-xl font-bold">10 Kids Unaware of Their
+                                        Halloween
                                         Constume
                                     </h3>
                                     <p class="inter-font text-base font-normal ">
@@ -173,30 +174,39 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="flex gap-2 pt-4">
-                                <div class="flex flex-col md:flex-row lg:flex-row gap-2">
-                                    <div>
-                                        <img src="./images/message-2.png" alt="">
+                            <div class="flex justify-between">
+                                <div class="flex gap-2 mt-2">
+                                    <div class="flex flex-col md:flex-row lg:flex-row gap-2">
+                                        <div>
+                                            <img src="./images/message-2.png" alt="">
+                                        </div>
+                                        <div>
+                                            <p class="inter-font text-base font-normal">560</p>
+                                        </div>
                                     </div>
-                                    <div>
-                                        <p class="inter-font text-base font-normal">560</p>
+                                    <div class="flex flex-col md:flex-row lg:flex-row gap-2">
+                                        <div>
+                                            <img src="./images/eye.png" alt="">
+                                        </div>
+                                        <div>
+                                            <p class="post-viewer1 inter-font text-base font-normal">1568</p>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-col md:flex-row lg:flex-row gap-2">
+                                        <div>
+                                            <img src="./images/time.png" alt="">
+                                        </div>
+                                        <div>
+                                            <p class="inter-font text-base font-normal"><span>5</span> <span>min</span>
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="flex flex-col md:flex-row lg:flex-row gap-2">
-                                    <div>
-                                        <img src="./images/eye.png" alt="">
-                                    </div>
-                                    <div>
-                                        <p class="post-viewer1 inter-font text-base font-normal">1568</p>
-                                    </div>
-                                </div>
-                                <div class="flex flex-col md:flex-row lg:flex-row gap-2">
-                                    <div>
-                                        <img src="./images/time.png" alt="">
-                                    </div>
-                                    <div>
-                                        <p class="inter-font text-base font-normal"><span>5</span> <span>min</span></p>
-                                    </div>
+                                <div class="mt-2">
+                                    <button class="mark-btn rounded-full btn-xm
+                                 p-0 py-0 px-0">
+                                        <div class="rounded-full"><img class="w-full rounded-full" src="./images/email .png" alt=""></div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -204,7 +214,7 @@
                     <!-- section post-before-mark end -->
                     <!-- section mark start -->
                     <!-- bg-[#12132d0d] -->
-                    <div class="bg-gray-700 lg:w-[30%] p-4 rounded-3xl space-y-3 lg:flex-2">
+                    <div id="markedPostContainer" class="bg-gray-700 lg:w-[30%] p-4 rounded-3xl space-y-3 lg:flex-2">
                         <div class="flex justify-between">
                             <div>
                                 <h2 class="text-white mulish-font text-xl font-bold">Title</h2>
@@ -214,14 +224,17 @@
                                     <img src="./images/tick.png" alt="">
                                 </div>
                                 <div>
-                                    <p class="text-white inter-font text-base font-normal">Mark as read ( <span id="markCount">0</span>
+                                    <p class="text-white inter-font text-base font-normal">Mark as read ( <span
+                                            id="markCount">0</span>
                                         )</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="flex justify-between bg-white rounded-xl p-2 items-center">
+                        <!-- section marked post start -->
+                        <div class="single-post flex justify-between bg-white rounded-xl p-2 items-center">
                             <div>
-                                <p class="post-title2 mulish-font text-base font-semibold text-black">10 Kids Unaware of Their
+                                <p class="post-title2 mulish-font text-base font-semibold text-black">10 Kids Unaware of
+                                    Their
                                     Halloween
                                     Costume</p>
                             </div>
@@ -232,6 +245,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- section marked post end -->
                     </div>
                     <!-- section mark end -->
                 </div>
