section discuss some js edited

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <h3 class="post-title1 mulish font text-xl font-bold">10 Kids Unaware of Their
+                                    <h3 id="post-title" class=" mulish font text-xl font-bold">10 Kids Unaware of Their
                                         Halloween
                                         Constume
                                     </h3>
@@ -189,7 +189,7 @@
                                             <img src="./images/eye.png" alt="">
                                         </div>
                                         <div>
-                                            <p class="post-viewer1 inter-font text-base font-normal">1568</p>
+                                            <p id="post-view" class=" inter-font text-base font-normal">1568</p>
                                         </div>
                                     </div>
                                     <div class="flex flex-col md:flex-row lg:flex-row gap-2">
@@ -233,7 +233,7 @@
                         <!-- section marked post start -->
                         <div class="single-post flex justify-between bg-white rounded-xl p-2 items-center">
                             <div>
-                                <p class="post-title2 mulish-font text-base font-semibold text-black">10 Kids Unaware of
+                                <p id="marked-post-title" class=" mulish-font text-base font-semibold text-black">10 Kids Unaware of
                                     Their
                                     Halloween
                                     Costume</p>
@@ -241,7 +241,7 @@
                             <div class="flex flex-col lg:flex-row min-w-[25%] gap-1 items-center">
                                 <div><img src="./images/eye.png" alt=""></div>
                                 <div>
-                                    <p class="post-view2 text-black">1568</p>
+                                    <p id="marked-post-view" class=" text-black">1568</p>
                                 </div>
                             </div>
                         </div>
