section discuss section marked post some js added

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     </div>
                                     <div class="flex flex-col md:flex-row lg:flex-row gap-2">
                                         <div>
-                                            <img src="./images/eye.png" alt="">
+                                            <img id="eye" src="./images/eye.png" alt="">
                                         </div>
                                         <div>
                                             <p id="post-view" class=" inter-font text-base font-normal">1568</p>
