--- a/index.html
+++ b/index.html
@@ -149,68 +149,79 @@
                 <div class="flex flex-col lg:flex-row justify-center lg:gap-4 space-y-3 lg:space-y-0">
                     <!-- section post-before-mark start -->
                     <div class="post-before-mark flex bg-[#797DFC1A] w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
-                        <div>
-                            <div class="w-[50%] lg:w-[40%]">
-                                <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600"></div>
-                                <img class="w-full" src="./images/joinforum.png" alt="">
-                            </div>
-                        </div>
-                        <div class="divide-y-2 divide-dashed space-y-3">
-                            <div>
+                        <div id="post-before-mark-container">
+                            <div class="flex">
                                 <div class="">
-                                    <p class="space-x-3 inter-font text-base font-medium">
-                                        <span># Music</span><span>Author:</span> <span>Awlad Hossain</span>
-                                    </p>
-                                </div>
-                                <div>
-                                    <h3 id="post-title" class=" mulish font text-xl font-bold">10 Kids Unaware of Their
-                                        Halloween
-                                        Constume
-                                    </h3>
-                                    <p class="inter-font text-base font-normal ">
-                                        It's one things to subject yourself to the Halloween costume mushap because hey
-                                        that's
-                                        your prerogative
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="flex justify-between">
-                                <div class="flex gap-2 mt-2">
-                                    <div class="flex flex-col md:flex-row lg:flex-row gap-2">
-                                        <div>
-                                            <img src="./images/message-2.png" alt="">
+                                    <div class="w-[50%] lg:w-[40%]">
+                                        <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600">
                                         </div>
-                                        <div>
-                                            <p class="inter-font text-base font-normal">560</p>
-                                        </div>
+                                        <img class="w-full" src="./images/joinforum.png" alt="">
                                     </div>
-                                    <div class="flex flex-col md:flex-row lg:flex-row gap-2">
-                                        <div>
-                                            <img id="eye" src="./images/eye.png" alt="">
+                                </div>
+                                <div class="divide-y-2 divide-dashed space-y-3">
+                                    <div>
+                                        <div class="">
+                                            <p class="space-x-3 inter-font text-base font-medium">
+                                                <span># Music</span><span>Author:</span> <span>Awlad Hossain</span>
+                                            </p>
                                         </div>
                                         <div>
-                                            <p id="post-view" class=" inter-font text-base font-normal">1568</p>
-                                        </div>
-                                    </div>
-                                    <div class="flex flex-col md:flex-row lg:flex-row gap-2">
-                                        <div>
-                                            <img src="./images/time.png" alt="">
-                                        </div>
-                                        <div>
-                                            <p class="inter-font text-base font-normal"><span>5</span> <span>min</span>
+                                            <h3 id="post-title" class=" mulish font text-xl font-bold">10 Kids Unaware
+                                                of Their
+                                                Halloween
+                                                Constume
+                                            </h3>
+                                            <p class="inter-font text-base font-normal ">
+                                                It's one things to subject yourself to the Halloween costume mushap
+                                                because hey
+                                                that's
+                                                your prerogative
                                             </p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="mt-2">
-                                    <button class="mark-btn rounded-full btn-xm
-                                 p-0 py-0 px-0">
-                                        <div class="rounded-full"><img class="w-full rounded-full" src="./images/email .png" alt=""></div>
-                                    </button>
+                                    <div class="flex justify-between">
+                                        <div class="flex gap-2 mt-2">
+                                            <div class="flex flex-col md:flex-row lg:flex-row gap-2">
+                                                <div>
+                                                    <img src="./images/message-2.png" alt="">
+                                                </div>
+                                                <div>
+                                                    <p class="inter-font text-base font-normal">560</p>
+                                                </div>
+                                            </div>
+                                            <div class="flex flex-col md:flex-row lg:flex-row gap-2">
+                                                <div>
+                                                    <img id="eye" src="./images/eye.png" alt="">
+                                                </div>
+                                                <div>
+                                                    <p id="post-view" class=" inter-font text-base font-normal">1568</p>
+                                                </div>
+                                            </div>
+                                            <div class="flex flex-col md:flex-row lg:flex-row gap-2">
+                                                <div>
+                                                    <img src="./images/time.png" alt="">
+                                                </div>
+                                                <div>
+                                                    <p class="inter-font text-base font-normal"><span>5</span>
+                                                        <span>min</span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="mt-2">
+                                            <button class="mark-btn rounded-full btn-xm
+                                     p-0 py-0 px-0">
+                                                <div class="rounded-full"><img class="w-full rounded-full"
+                                                        src="./images/email .png" alt=""></div>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+
                     <!-- section post-before-mark end -->
                     <!-- section mark start -->
                     <!-- bg-[#12132d0d] -->
@@ -233,7 +244,8 @@
                         <!-- section marked post start -->
                         <div class="single-post flex justify-between bg-white rounded-xl p-2 items-center">
                             <div>
-                                <p id="marked-post-title" class=" mulish-font text-base font-semibold text-black">10 Kids Unaware of
+                                <p id="marked-post-title" class=" mulish-font text-base font-semibold text-black">10
+                                    Kids Unaware of
                                     Their
                                     Halloween
                                     Costume</p>
