section latest some js added

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
-                <div class="flex flex-wrap justify-center">
+                <div id="latest-posts-container" class="flex flex-wrap justify-center">
                     <div class="lg:w-[30%]">
                         <div class="w-full">
                             <img class="w-full" src="./images/joinforum.png" alt="">
