--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </div>
         </section>
         <!-- section join end -->
-        <!-- section posts start -->
+        <!-- section latest posts start -->
         <section class="">
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div class="text-center space-y-3 flex flex-col items-center">
@@ -293,8 +293,8 @@
                 </div>
             </div>
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
-                <div id="latest-posts-container" class="flex flex-wrap justify-center">
-                    <div class="lg:w-[30%]">
+                <div id="latest-posts-container" class="flex flex-wrap justify-center gap-2">
+                   <!--  <div class="lg:w-[325px]">
                         <div class="w-full">
                             <img class="w-full" src="./images/joinforum.png" alt="">
                         </div>
@@ -319,11 +319,11 @@
                                 <p class="mulish-font text-sm font-normal">ROR Devoloper</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
-        <!-- section posts end -->
+        <!-- section latest posts end -->
     </main>
     <footer class="">
         <section>
